Factor out models part 7: Change the old m4d.Models namespace to m4d.Context to avoid confusion...

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -223,8 +223,8 @@
       <DependentUpon>201403211746163_SongPurchase.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Models\DanceMusicConfiguration.cs" />
-    <Compile Include="Models\DanceMusicContext.cs" />
+    <Compile Include="Context\DanceMusicConfiguration.cs" />
+    <Compile Include="Context\DanceMusicContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="Utilities\AdmAuthentication.cs" />
