Bug fixes + Additional user configuration including listing songs by user

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -71,14 +71,14 @@
   <entityFramework>
     <!--
     <contexts>
-      <context type="m4d.Models.DanceMusicContext, m4d">
-        <databaseInitializer type="m4d.Models.DanceMusicInitializer, m4d" />
+      <context type="m4dModels.DanceMusicContext, m4d">
+        <databaseInitializer type="m4dModels.DanceMusicInitializer, m4d" />
       </context>
     </contexts>    
     -->    
     <!--<contexts>
-      <context type="m4d.Models.DanceMusicContext, m4d">
-        <databaseInitializer type="System.Data.Entity.DropCreateDatabaseAlways`1[[m4d.Models.DanceMusicContext, m4d]], EntityFramework" />
+      <context type="m4dModels.DanceMusicContext, m4d">
+        <databaseInitializer type="System.Data.Entity.DropCreateDatabaseAlways`1[[m4dModels.DanceMusicContext, m4d]], EntityFramework" />
       </context>
     </contexts>-->    
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
