--- a/DanceCalc/m4d.Tests/m4d.Tests.csproj
+++ b/DanceCalc/m4d.Tests/m4d.Tests.csproj
@@ -94,6 +94,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="Test Data\backup-snapshot.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
