Pull in changes that are in dancecalc but have been filtered out of solution

--- a/DanceCalc/packages/repositories.config
+++ b/DanceCalc/packages/repositories.config
@@ -2,6 +2,9 @@
 <repositories>
   <repository path="..\DanceLib\packages.config" />
   <repository path="..\DanceUtilities\packages.config" />
+  <repository path="..\m4d.Tests\packages.config" />
+  <repository path="..\m4d\packages.config" />
+  <repository path="..\m4dModels\packages.config" />
   <repository path="..\music4dance.Tests\packages.config" />
   <repository path="..\music4dance\packages.config" />
   <repository path="..\SDBTests\packages.config" />
