--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -311,6 +311,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\chosen.jquery.js" />
     <Content Include="Scripts\chosen.jquery.min.js" />
+    <Content Include="Scripts\Counter.js" />
     <Content Include="Scripts\edit.js" />
     <None Include="Scripts\jquery-2.1.0.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.0.js" />
@@ -372,6 +373,7 @@
     <Content Include="Views\Song\SongItems.cshtml" />
     <Content Include="Views\Song\XboxSearch.cshtml" />
     <Content Include="Views\Admin\Results.cshtml" />
+    <Content Include="Views\Home\Counter.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
