Get the basic dance counter web UX working
Remaining work:

Clean this up both code-wise and UX-wise
At minimum cache the last several tempo/dance lookups
Think about how to add back in some of the stuff that was part of the phone versions

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -217,6 +217,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\DanceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LogController.cs" />
     <Compile Include="Controllers\PurchaseInfoController.cs" />
