--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -375,6 +375,7 @@
     <Content Include="Views\Song\XboxSearch.cshtml" />
     <Content Include="Views\Admin\Results.cshtml" />
     <Content Include="Views\Home\Counter.cshtml" />
+    <Content Include="Views\Home\CounterHelp.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
