Xbox Music Batching phase 1: Fuzzy matches where Artist, Album, Title all align

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -378,6 +378,7 @@
     <Content Include="Views\Admin\Results.cshtml" />
     <Content Include="Views\Home\Counter.cshtml" />
     <Content Include="Views\Home\CounterHelp.cshtml" />
+    <Content Include="Views\Song\BatchXbox.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
