--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -71,10 +71,12 @@
     <Compile Include="DanceRating.cs" />
     <Compile Include="DbObject.cs" />
     <Compile Include="ISongPropertyFactory.cs" />
+    <Compile Include="ITunesService.cs" />
     <Compile Include="IUserMap.cs" />
     <Compile Include="LogBase.cs" />
     <Compile Include="LogValue.cs" />
     <Compile Include="ModifiedRecord.cs" />
+    <Compile Include="MusicService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PurchaseLink.cs" />
     <Compile Include="Song.cs" />
@@ -84,6 +86,7 @@
     <Compile Include="SongMerge.cs" />
     <Compile Include="SongProperty.cs" />
     <Compile Include="UndoResult.cs" />
+    <Compile Include="XboxService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
