--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -260,6 +260,7 @@
     <Compile Include="Utilities\AdmAuthentication.cs" />
     <Compile Include="Utilities\DBExtentions.cs" />
     <Compile Include="ViewModels\MergeCluster.cs" />
+    <Compile Include="ViewModels\ServiceSearchResults.cs" />
     <Compile Include="ViewModels\SongCounts.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -374,11 +375,11 @@
     <Content Include="Views\Song\Index.cshtml" />
     <Content Include="Views\Song\Merge.cshtml" />
     <Content Include="Views\Song\SongItems.cshtml" />
-    <Content Include="Views\Song\XboxSearch.cshtml" />
+    <Content Include="Views\Song\MusicServiceSearch.cshtml" />
     <Content Include="Views\Admin\Results.cshtml" />
     <Content Include="Views\Home\Counter.cshtml" />
     <Content Include="Views\Home\CounterHelp.cshtml" />
-    <Content Include="Views\Song\BatchXbox.cshtml" />
+    <Content Include="Views\Song\BatchMusicService.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
