Next pass on x-box music matching with some tests and updated data

--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -54,6 +54,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="SongDetailTests.cs" />
     <Compile Include="SongTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
