Get basic amazon digital track lookup working + enable fallback of cleaned up title and artist

--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="AccountViewModels.cs" />
     <Compile Include="AlbumDetails.cs" />
+    <Compile Include="AmazonService.cs" />
     <Compile Include="ApplicationUser.cs" />
     <Compile Include="Dance.cs" />
     <Compile Include="DanceRating.cs" />
