--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -131,4 +131,79 @@
       </listeners>
     </trace>
   </system.diagnostics>  
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="AWSECommerceServiceBinding">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding1">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding2">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding3">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding4">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding5">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding6">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding7">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding8">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding9">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding10">
+          <security mode="Transport" />
+        </binding>
+        <binding name="AWSECommerceServiceBinding11" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePort" />
+      <endpoint address="https://webservices.amazon.ca/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding1"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortCA" />
+      <endpoint address="https://webservices.amazon.cn/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding2"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortCN" />
+      <endpoint address="https://webservices.amazon.de/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding3"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortDE" />
+      <endpoint address="https://webservices.amazon.es/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding4"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortES" />
+      <endpoint address="https://webservices.amazon.fr/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding5"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortFR" />
+      <endpoint address="https://webservices.amazon.in/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding6"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortIN" />
+      <endpoint address="https://webservices.amazon.it/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding7"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortIT" />
+      <endpoint address="https://webservices.amazon.co.jp/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding8"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortJP" />
+      <endpoint address="https://webservices.amazon.co.uk/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding9"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortUK" />
+      <endpoint address="https://webservices.amazon.com/onca/soap?Service=AWSECommerceService"
+        binding="basicHttpBinding" bindingConfiguration="AWSECommerceServiceBinding10"
+        contract="AWSReference.AWSECommerceServicePortType" name="AWSECommerceServicePortUS" />
+    </client>
+  </system.serviceModel>
 </configuration>
