Start at code to pull tempo info in from local files + this is devolving to reworking the file uploading code, which is fine - should be able to use this for a bunch of things

--- a/DanceCalc/m4d.Tests/m4d.Tests.csproj
+++ b/DanceCalc/m4d.Tests/m4d.Tests.csproj
@@ -95,6 +95,7 @@
   <ItemGroup>
     <Content Include="App.config" />
     <Content Include="Test Data\backup-snapshot.txt" />
+    <Content Include="Test Data\TEMPOES.TXT" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
