--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -266,6 +266,7 @@
     <Compile Include="Utilities\AdmAuthentication.cs" />
     <Compile Include="Utilities\AWSFetcher.cs" />
     <Compile Include="Utilities\DBExtentions.cs" />
+    <Compile Include="Utilities\HtmlExtensions.cs" />
     <Compile Include="ViewModels\LocalMerger.cs" />
     <Compile Include="ViewModels\MergeCluster.cs" />
     <Compile Include="ViewModels\ServiceSearchResults.cs" />
