Fix the bug with glyphicons and windows phone

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -34,7 +34,9 @@
       <remove name="FormsAuthenticationModule" />
       <add name="ApplicationInsights" type="Microsoft.ApplicationInsights.Telemetry.Web.ApplicationInsightsModule" />
     </modules>
-    
+    <staticContent>
+      <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
+    </staticContent>
     <validation validateIntegratedModeConfiguration="false" />
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
