Fix the filter for service lookup

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -34,9 +34,9 @@
       <remove name="FormsAuthenticationModule" />
       <add name="ApplicationInsights" type="Microsoft.ApplicationInsights.Telemetry.Web.ApplicationInsightsModule" />
     </modules>
-    <staticContent>
+    <!--<staticContent>
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
-    </staticContent>
+    </staticContent>-->
     <validation validateIntegratedModeConfiguration="false" />
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
