Hide Unpurchasable songs from anonymous users + add in some tracing infrastructure

--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -132,6 +132,14 @@
         <add name="WebPageTraceListener" type="System.Web.WebPageTraceListener,              System.Web,              Version=4.0.0.0,              Culture=neutral,             PublicKeyToken=b03f5f7f11d50a3a" />
       </listeners>
     </trace>
+    <switches>
+      <!-- This switch controls general messages. In order to 
+         receive general trace messages change the value to the 
+         appropriate level. "1" gives error messages, "2" gives errors 
+         and warnings, "3" gives more detailed error information, and 
+         "4" gives verbose trace information -->
+      <add name="General" value="0"/>
+    </switches>
   </system.diagnostics>  
   <system.serviceModel>
     <bindings>
