--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Utilities\AWSFetcher.cs" />
     <Compile Include="Utilities\DBExtentions.cs" />
     <Compile Include="Utilities\HtmlExtensions.cs" />
+    <Compile Include="Utilities\TraceLevels.cs" />
     <Compile Include="ViewModels\LocalMerger.cs" />
     <Compile Include="ViewModels\MergeCluster.cs" />
     <Compile Include="ViewModels\ServiceSearchResults.cs" />
