Add in some more diagnostics
Tracing for reloading of database
mvcdiagnostics.aspx for basics mvc diag page

--- a/DanceCalc/m4d.Tests/m4d.Tests.csproj
+++ b/DanceCalc/m4d.Tests/m4d.Tests.csproj
@@ -95,6 +95,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App.config" />
+    <Content Include="MvcDiagnostics.aspx" />
     <Content Include="Test Data\backup-snapshot.txt" />
     <Content Include="Test Data\TEMPOES.TXT" />
   </ItemGroup>
