--- a/DanceCalc/m4d.Tests/packages.config
+++ b/DanceCalc/m4d.Tests/packages.config
@@ -4,5 +4,6 @@
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.1.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MvcDiagnostics" version="5.1.2" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
 </packages>
