--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -5,6 +5,7 @@
   <package id="chosen" version="1.1.0" targetFramework="net45" />
   <package id="chosen.jquery" version="1.1.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
+  <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.12.0" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.Telemetry.Services" version="0.7.1.0" targetFramework="net45" />
