Factor out SongBase from SongDetails and Song
This ended up being easier than expected and didn't cause a database update - although I did lose the 'required' attribute on SongDetails title, since I am using a null title for soft delete in the backing database.  Will worry about this when we do user facing song editing...

--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -83,6 +83,7 @@
     <Compile Include="PurchaseLink.cs" />
     <Compile Include="ServiceTrack.cs" />
     <Compile Include="Song.cs" />
+    <Compile Include="SongBase.cs" />
     <Compile Include="SongDetails.cs" />
     <Compile Include="SongFilter.cs" />
     <Compile Include="SongLog.cs" />
