--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -333,7 +333,6 @@
     <Content Include="Content\bootstrap.css.map" />
     <None Include="Properties\PublishProfiles\m4d-old.pubxml" />
     <None Include="Properties\PublishProfiles\m4d.pubxml" />
-    <None Include="Properties\PublishProfiles\music4dance.pubxml" />
     <Content Include="MvcDiagnostics.aspx" />
     <Content Include="RecaptchaNet.ReadMe.txt" />
     <Content Include="Scripts\bootstrap.js" />
@@ -342,6 +341,7 @@
     <Content Include="Scripts\chosen.jquery.min.js" />
     <Content Include="Scripts\Counter.js" />
     <Content Include="Scripts\edit.js" />
+    <None Include="Properties\PublishProfiles\music4dance %28dwgray%29.pubxml" />
     <None Include="Scripts\jquery-2.1.1.intellisense.js" />
     <Content Include="Scripts\jquery-2.1.1.js" />
     <Content Include="Scripts\jquery-2.1.1.min.js" />
