--- a/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
+++ b/DanceCalc/m4dModels.Tests/m4dModels.Tests.csproj
@@ -56,6 +56,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="MockUserMap.cs" />
     <Compile Include="SongDetailTests.cs" />
     <Compile Include="SongTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
