Get Favicon working with the new logo

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -293,9 +293,16 @@
     <Content Include="Content\chosen-sprite%402x.png" />
     <Content Include="Content\chosen-sprite.png" />
     <Content Include="Content\chosen.css" />
+    <Content Include="Content\favicon.ico" />
     <Content Include="Content\itunes-charm.png" />
     <Content Include="Content\itunes-logo.png" />
     <Content Include="Content\PagedList.css" />
+    <Content Include="Content\thermometer-0.png" />
+    <Content Include="Content\thermometer-1.png" />
+    <Content Include="Content\thermometer-2.png" />
+    <Content Include="Content\thermometer-3.png" />
+    <Content Include="Content\thermometer-4.png" />
+    <Content Include="Content\thermometer-5.png" />
     <Content Include="Content\xbox-logo.png" />
     <Content Include="Content\xbox-charm.png" />
     <Content Include="favicon.ico" />
