--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -286,6 +286,7 @@
   <ItemGroup>
     <Content Include="Content\amazon-charm.png" />
     <Content Include="Content\amazon-logo.png" />
+    <Content Include="Content\BlackBanner.png" />
     <Content Include="Content\bootstrap-theme.css" />
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
