--- a/DanceCalc/m4d/Web.config
+++ b/DanceCalc/m4d/Web.config
@@ -21,29 +21,36 @@
   </appSettings>
   <system.web>
     <authentication mode="None" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <!--Application Insights: add System.Runtime assembly to resolve PCL dependencies-->
+        <add assembly="System.Runtime, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+      </assemblies>
+    </compilation>
     <httpRuntime targetFramework="4.5" />
     <trace enabled="true" writeToDiagnosticsTrace="true" mostRecent="true" pageOutput="false" />
     <customErrors mode="RemoteOnly"></customErrors>
     <httpModules>
-      <add name="ApplicationInsights" type="Microsoft.ApplicationInsights.Telemetry.Web.ApplicationInsightsModule" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" />
     </httpModules>
   </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthenticationModule" />
-      <add name="ApplicationInsights" type="Microsoft.ApplicationInsights.Telemetry.Web.ApplicationInsightsModule" />
+      <remove name="ApplicationInsightsWebTracking" />
+      <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.RequestTracking.WebRequestTrackingModule, Microsoft.ApplicationInsights.Platform" preCondition="managedHandler" />
     </modules>
     <!--<staticContent>
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
     </staticContent>-->
-    <validation validateIntegratedModeConfiguration="false" />
   <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
-    </handlers></system.webServer>
+    </handlers>
+  <validation validateIntegratedModeConfiguration="false" />
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
