--- a/DanceCalc/m4d/packages.config
+++ b/DanceCalc/m4d/packages.config
@@ -8,7 +8,8 @@
   <package id="HtmlAgilityPack" version="1.4.6" targetFramework="net45" />
   <package id="jQuery" version="2.1.1" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.12.0" targetFramework="net45" />
-  <package id="Microsoft.ApplicationInsights.Telemetry.Services" version="0.7.1.0" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights" version="0.9.0-build06428" targetFramework="net45" />
+  <package id="Microsoft.ApplicationInsights.Web" version="0.9.0-build06428" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.0.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.0.1" targetFramework="net45" />
