--- a/DanceCalc/packages/repositories.config
+++ b/DanceCalc/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\DanceLib\packages.config" />
   <repository path="..\DanceUtilities\packages.config" />
   <repository path="..\m4d.Tests\packages.config" />
   <repository path="..\m4d\packages.config" />
