Get tests working for basic song creation.  In the process, create usable mocks for property, dancerating and user factories.
A bunch of refactoring ot enable the above + cleanup

--- a/DanceCalc/m4dModels/m4dModels.csproj
+++ b/DanceCalc/m4dModels/m4dModels.csproj
@@ -72,7 +72,7 @@
     <Compile Include="Dance.cs" />
     <Compile Include="DanceRating.cs" />
     <Compile Include="DbObject.cs" />
-    <Compile Include="ISongPropertyFactory.cs" />
+    <Compile Include="IFactories.cs" />
     <Compile Include="ITunesService.cs" />
     <Compile Include="IUserMap.cs" />
     <Compile Include="LogBase.cs" />
