--- a/DanceCalc/packages/repositories.config
+++ b/DanceCalc/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\DanceUtilities\packages.config" />
   <repository path="..\m4d.Tests\packages.config" />
   <repository path="..\m4d\packages.config" />
+  <repository path="..\m4dModels.Tests\packages.config" />
   <repository path="..\m4dModels\packages.config" />
   <repository path="..\music4dance.Tests\packages.config" />
   <repository path="..\music4dance\packages.config" />
