--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -486,6 +486,8 @@
     <Content Include="Views\Song\Sample.cshtml" />
     <Content Include="Views\Admin\UploadCatalog.cshtml" />
     <Content Include="Views\Song\AlbumDetails.cshtml" />
+    <Content Include="Views\Home\TermsOfService.cshtml" />
+    <Content Include="Views\Home\PrivacyPolicy.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
