Add counter into dance create and edit pages and wire everything up
Still should default to 3/4 for something identified as a waltz, figure out a way to get easily readable BPM for each dance in edit mode

--- a/DanceCalc/m4d/m4d.csproj
+++ b/DanceCalc/m4d/m4d.csproj
@@ -498,6 +498,7 @@
     <Content Include="Views\ApplicationUsers\Index.cshtml" />
     <Content Include="Views\ApplicationUsers\ChangeRoles.cshtml" />
     <Content Include="Views\Shared\_Counter.cshtml" />
+    <Content Include="Views\Shared\_MeterChooser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
